src/test/resources/public/input/typechecking/pass/pass05.jova
class Tmp {
    Tmp() {

    }

    Tmp(int test) {

    }

    Tmp (String s) {

    }
}