src/test/resources/public/input/typechecking/fail/incompatible_condition/fail02.jova
class Test{

}

class Main {

  public int main() {
    Test test;
    test = new Test;
    if(test){
      
    }
    return 0;
  }

}